css/sgui.css
/* ... */
.widget-button, .btn {
	box-sizing: border-box;
	display: flex;
	justify-content: center;
	flex-wrap: nowrap;
	margin: 0px;
	padding: 6px 8px;
	font-size: 1.4rem;
	font-weight: normal;
	line-height: 1;
	border: none;
	border-radius: 24px;
	cursor: pointer;

	&:hover {filter: brightness(1.1);}
	&.-normal {color: var(--normal-text-color); background-color: var(--normal-bg-color);}

	&.-primary {color: var(--primary-text-color); background-color: var(--primary-bg-color);}
	&.-primary>.icon {color: var(--primary-text-color);}

	&.-secondary {color: var(--secondary-text-color); background-color: var(--secondary-bg-color);}
	&.-secondary>.icon {color: var(--secondary-text-color);}

	&.-success {color: var(--success-text-color); background-color: var(--success-bg-color);}
	&.-success>.icon {color: var(--success-text-color);}

	&.-info {color: var(--info-text-color); background-color: var(--info-bg-color);}
	&.-info>.icon {color: var(--info-text-color);}

	&.-warning {color: var(--warning-text-color); background-color: var(--warning-bg-color);}
	&.-warning>.icon {color: var(--warning-text-color);}

	&.-danger {color: var(--danger-text-color); background-color: var(--danger-bg-color);}
	&.-danger>.icon {color: var(--danger-text-color);}

	&.-link {color: var(--link-text-color); background-color: var(--link-bg-color);}
	&.-link>.icon {color: var(--link-text-color);}

	&.-cancel {color: var(--cancel-text-color); background-color: var(--cancel-bg-color); margin-right: 16px;}
	&.-cancel>.icon {color: var(--cancel-text-color);}

	&.-floating {color: var(--floating-text-color); background-color: var(--floating-bg-color); box-shadow: 0 0 4px rgba(0,0,0,.14),0 4px 8px rgba(0,0,0,.28)}
	&.-floating>.icon {color: var(--floating-text-color);}

	&.-circle24 {width: 24px; height: 24px; padding: 0px; border-radius: 50%;}
	&.-circle32 {width: 32px; height: 32px; padding: 4px !important; border-radius: 50%;}
	&.-circle48 {width: 48px; height: 48px; padding: 12px !important; border-radius: 50%;}

	/*
	button.btn.-circle32 {width: 32px; height: 32px; padding: 0;}
	button.btn.-circle48 {width: 48px; height: 48px; padding: 0;}
	&.-primary>.icon {opacity: 0.8;}
	&.-primary>.icon.-material {color: #f5f5f5;}
	&.-primary>span {opacity: 0.9;}
	&.-floating.-right {right: 16px; position: absolute;}
	&.-floating.-bottom {bottom: 16px; position: fixed;}
	&.-floating .icon.-material {color: #ffc8c3;}
	*/

	&.-no-wrap {flex-wrap: nowrap;}
	&.-big {padding-top: 16px; padding-bottom: 16px; border-radius: 64px; font-size: 1.8rem;}
	&.-hidden {display: none;}
	&:has(:only-child) {padding: 6px;}
	&:has(.-desc) {border-radius: 128px;}
	&.-fill {width: 100%; padding-left: 0; padding-right: 0;}
	&.-wrap {white-space: normal;}
	&.-disabled {color: var(--disabled-text-color); background-color: var(--disabled-bg-color);}
	&.-active {box-shadow: 0 0 0 1px #ffba8c inset;}

	&.-upload>input.form-file {display: none;}
	&.-upload>label {margin: 0;}
	&.-sg-text-center .icon {display: block; margin: 0 auto;}

	>span>em {font-weight: normal; font-size: 1.2rem; font-style: normal; display: block;}
	>.-desc {flex: 0 0 100%; text-align: center; font-size: 1.2rem;}
	>.icon {margin: 0;}
	>.icon:only-child {margin: 0;}
	>span {padding: 0 6px; line-height: 24px; vertical-align: middle; display: inline-block;}
	>span.-hidden {display: none;}
	>.icon+span {padding-left: 4px;}
	>.icon-group {padding: 0;}
}

/* widget-floatingactionbutton */
.widget-floatingactionbutton {
	position: fixed; margin: 0 auto; bottom: 8px; z-index: 1000; display: flex; flex-wrap: wrap; width: calc(100% - 16px); padding: 0 8px;

	>* {flex: 1 0 100%; text-align: right; margin-top: 8px;}
	&:hover>.-item>a {display: inline-block;}
}

/* widget-message */
.widget-message {
	padding: 32px 8px; text-align: center;
}

/* widget-listtile */
.widget-listtile {
	display: flex; flex-wrap: wrap; justify-content: space-between; padding: 8px; align-items: flex-start;

	>.-title {
		flex: 1;
		>* {display: block;}
		>.-title-text {font-weight: bold;}
		>.-subtitle-text {font-size: 0.85em;}
	}
	>.-leading {padding-right: 8px;}
}

/* widget-stepmenu */
.widget-stepmenu {
	margin: 8px 32px 24px;
	
	>ul {
		margin:8px 0 32px 0; padding: 0; list-style-type: none; height:24px; border-bottom: 1px #aaa solid; display: flex; flex-wrap: nowrap; justify-content: space-between;
		>.ui-item {
			display: block; flex: 0 0 48px; text-align: center;
			>* {display: block; width: 48px; height: 48px; margin: 0 auto; background-color: #eee; line-height: 48px; border-radius: 50%; overflow: hidden;}
			>*:hover {background-color: #f5f5f5;}
			.icon {color: grey;}
			&.-active>* {background-color: green; color:#fff;}
			&.-active>*:hover {background-color: #008912;}
			&.-active .icon {color: #fff;}
			&>.-cancel {background-color: red;}
			&>.-cancel>.icon {color:#fff;}
		}
	}
}

/* widget-card */
.widget-card {
	margin: 8px 0;

	.widget-table:last-child {margin-bottom: 8px;}
}
/* ... */

